UX: Correctly overflow long names badges

--- a/scss/common/fkb-c-badges.scss
+++ b/scss/common/fkb-c-badges.scss
@@ -33,7 +33,6 @@
     }
     .badge-category__name {
       line-height: var(--line-height-small);
-      overflow: visible;
     }
   }
 
